Tue Feb  5 15:26:15 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* src/mudlist.c (mudlist_parse_hoststring): Added.
	(mudlist_button_import_cb): Added.
	(window_mudlist): Different behavior if called from wizard
	or not.

	* src/profiles.c (connections_fields_clean): Moved from 
	connections_button_info_cancel_cb.
	(connections_button_info_fethc_cb): Added.

Tue Feb  5 12:21:17 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* src/mudlist.c (mudlist_fix_codebase): Added, now changes some
	codebases into better namnes.

Mon Feb  4 22:45:20 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/mccpDecompress.c: include config.h.

Mon Feb  4 13:13:21 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Updated

	* src/gnome-mud.c: init_window renamed to main_window

	* src/init.c: Renamed of alot of functions to more intelligent
	names.
	* src/keybind.c: Ditto.
	* src/prefs.c: Renamed copy_preferences to prefs_copy.

Mon Feb  4 11:58:14 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Updated

	* src/keybind.c (on_KB_button_delete_clicked): Segfault fix,
	now uses correct profile data.

Mon Feb  4 11:22:15 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* src/init.c: More MCCP #ifdef's
	* src/mccpDecompress.c: Ditto

Mon Feb  4 10:31:36 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Changed a little.

	* src/net.c (make_connection): Added MCCP #ifdef's
	(disconnect): Ditto
	(road_from_connection): Removed unused variable.

Mon Feb  4 09:50:38 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (about_window): added Vashti.
	* src/net.c (read_from_connection): Robin's fix to MCCP segfaults.
	* src/prefs.c (window prefs): added title to preferences window.
	* src/modules.c (do_plugin_information): likewise.
	* po/{ca,es}.po: Updated translations.
	* BUGS: removed old color dialog bug.

Mon Feb  4 09:31:23 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: added Vashti.
	* CONTRIBUTERS: removed.
